--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,9 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.10.1",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.55",
     "lodash.throttle": "^4.1.1",
     "qs": "^6.9.1",
     "random-int": "^2.0.1",
