--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "react": "^16.7.0",
     "react-async-component": "^2.0.0",
     "react-dom": "^16.7.0",
+    "react-fastclick": "^3.0.2",
     "react-google-recaptcha": "^2.0.1",
     "react-helmet": "^5.2.0",
     "react-hot-loader": "^4.6.3",
