--- a/app/package.json
+++ b/app/package.json
@@ -49,6 +49,7 @@
     "postcss-loader": "^3.0.0",
     "sass-loader": "^6.0.7",
     "style-loader": "^0.23.1",
+    "typescript": "^4.2.2",
     "webpack": "^4.17.0",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.14"
